<resources>
    <string name="app_name">HKR</string>
    <string name="Email_signup">Email</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="log_in">Log in</string>
    <string name="Title_login">Hiker</string>
    <string name="forgot_login">Forgot?</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_contact">Create contact</string>
    <string name="Edit_contact">Edit contact</string>
    <string name="Back">Back</string>
    <string name="create">Create</string>
    <string name="save_edit">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Are you sure you want to delete contact?</string>
</resources>