<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp">

    <TextView
        android:id="@+id/warning"
        android:layout_width="200dp"
        android:layout_height="74dp"
        android:layout_marginTop="192dp"
        android:fontFamily="sans-serif"
        android:text="@string/warning"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="64dp"
        android:background="#651FFF"
        android:fontFamily="sans-serif-medium"
        android:text="@string/delete"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#e0e0e0  "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/warning" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="4dp"
        android:background="#651FFF"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#e0e0e0  "
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning" />

</androidx.constraintlayout.widget.ConstraintLayout>