<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0e0e0  ">

    <TextView
        android:id="@+id/app_title_signup"
        android:layout_width="200dp"
        android:layout_height="74dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lobster"
        android:text="@string/Title_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#64DD17"
        android:textSize="72sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LName_signup"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="#D8FFFFFF"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/FName_signup"
        app:layout_constraintStart_toStartOf="@+id/FName_signup"
        app:layout_constraintTop_toBottomOf="@+id/FName_signup" />

    <EditText
        android:id="@+id/Email_signup"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="#D8FFFFFF"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/Password_signup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="#D8FFFFFF"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/Email_signup"
        app:layout_constraintStart_toStartOf="@+id/Email_signup"
        app:layout_constraintTop_toBottomOf="@+id/Email_signup" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="#651FFF"
        android:fontFamily="sans-serif-medium"
        android:text="Create an account"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#e0e0e0  "
        app:layout_constraintEnd_toEndOf="@+id/Password_signup"
        app:layout_constraintStart_toStartOf="@+id/Password_signup"
        app:layout_constraintTop_toBottomOf="@+id/Password_signup" />

    <EditText
        android:id="@+id/FName_signup"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#D8FFFFFF"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title_signup" />

    <EditText
        android:id="@+id/editTextPhone"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:background="#D8FFFFFF"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="phone"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/LName_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LName_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>